--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,7 +5,7 @@
     margin-right: auto;
     display: block;
     background-color: black;
-    border: 3px solid red;
+    border: 3px solid blue;
 }
 
 #title {
@@ -15,12 +15,15 @@
 
 h2 {
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 #info-table, th, td {
     text-align: left;
     border: 1px solid black;
     border-collapse: collapse;
+    margin-left: auto;
+    margin-right:auto;
 }
 
 th {
